@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.651 2003/01/27 21:44:38 jonnymind Exp $
+ * $Id: ChangeLog,v 1.652 2003/01/27 23:07:45 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-01-28 00:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    ! Minor fixed to recent fix to md_strAt() when searching for '.'
 
 2003-01-27 00:02 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/thread.c
